Rename Screen -> Monitor (IScreen already exists)

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -291,6 +291,7 @@ add_library(oscar STATIC
     Platform/LogMessage.h
     Platform/LogMessageView.h
     Platform/LogSink.h
+    Platform/Monitor.h
     Platform/os.cpp
     Platform/os.h
     Platform/RawEvent.h
@@ -298,7 +299,6 @@ add_library(oscar STATIC
     Platform/ResourcePath.h
     Platform/ResourceStream.cpp
     Platform/ResourceStream.h
-    Platform/Screen.h
     Platform/Screenshot.h
     Platform/ScreenshotAnnotation.h
     Platform/Widget.cpp
