Add Environment class

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -101,6 +101,8 @@ add_library(OpenSimCreator STATIC
 
     Documents/Model/BasicModelStatePair.cpp
     Documents/Model/BasicModelStatePair.h
+    Documents/Model/Environment.cpp
+    Documents/Model/Environment.h
     Documents/Model/IModelStatePair.h
     Documents/Model/ModelStateCommit.cpp
     Documents/Model/ModelStateCommit.h
