--- a/resources/imgui_base_config.ini
+++ b/resources/imgui_base_config.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,77
-Size=1920,951
+Size=1920,903
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,7 +9,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Splash screen]
-Pos=640,341
+Pos=640,317
 Size=640,512
 Collapsed=0
 
@@ -22,7 +22,7 @@ Collapsed=0
 Pos=0,48
 Size=1920,811
 Collapsed=0
-DockId=0x00000028,0
+DockId=0x00000034,0
 
 [Window][Hierarchy]
 Pos=0,48
@@ -62,7 +62,7 @@ DockId=0x00000020,0
 
 [Window][Coordinates]
 Pos=0,77
-Size=337,385
+Size=270,484
 Collapsed=0
 DockId=0x00000020,1
 
@@ -87,7 +87,7 @@ Collapsed=0
 Pos=364,19
 Size=1157,1117
 Collapsed=0
-DockId=0x00000028,1
+DockId=0x00000034,1
 
 [Window][Edit Props]
 Pos=0,620
@@ -126,7 +126,7 @@ DockId=0x00000020,0
 Pos=364,19
 Size=1157,1117
 Collapsed=0
-DockId=0x00000028,0
+DockId=0x00000034,0
 
 [Window][editor]
 Pos=60,60
@@ -214,14 +214,14 @@ Size=512,375
 Collapsed=0
 
 [Window][viewer0]
-Pos=339,77
-Size=1581,720
+Pos=272,77
+Size=1316,672
 Collapsed=0
-DockId=0x00000028,0
+DockId=0x00000034,0
 
 [Window][Log]
-Pos=0,799
-Size=1920,229
+Pos=272,751
+Size=1316,229
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -231,22 +231,22 @@ Size=512,787
 Collapsed=0
 
 [Window][viewer1]
-Pos=1152,77
-Size=768,362
+Pos=1264,77
+Size=656,351
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000F,0
 
 [Window][viewer2]
-Pos=1152,441
-Size=768,385
+Pos=1264,430
+Size=656,348
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000004,0
 
 [Window][viewer3]
-Pos=1538,464
-Size=382,471
+Pos=1262,415
+Size=326,167
 Collapsed=0
-DockId=0x0000000F
+DockId=0x00000005,0
 
 [Window][Simulations]
 Pos=1548,654
@@ -255,14 +255,14 @@ Collapsed=0
 DockId=0x00000014
 
 [Window][Simulation Details]
-Pos=1523,569
-Size=397,488
+Pos=1590,531
+Size=330,449
 Collapsed=0
-DockId=0x00000012,0
+DockId=0x0000002A,0
 
 [Window][Loading Message]
-Pos=704,249
-Size=512,56
+Pos=672,482
+Size=576,56
 Collapsed=0
 
 [Window][select experiment]
@@ -274,7 +274,7 @@ Collapsed=0
 Pos=368,0
 Size=1552,1200
 Collapsed=0
-DockId=0x00000028
+DockId=0x00000034
 
 [Window][wizardstep2sidebar]
 Size=366,1200
@@ -310,18 +310,18 @@ DockId=0x00000015,0
 
 [Window][wizard_3dViewer]
 Pos=269,46
-Size=1651,1011
+Size=1382,732
 Collapsed=0
-DockId=0x00000028,0
+DockId=0x00000034,0
 
 [Window][history]
-Pos=1254,46
-Size=267,1011
+Pos=1653,46
+Size=267,963
 Collapsed=0
-DockId=0x00000018,0
+DockId=0x0000002E,0
 
 [Window][Save Changes?]
-Pos=704,467
+Pos=704,443
 Size=512,122
 Collapsed=0
 
@@ -360,38 +360,38 @@ Collapsed=0
 DockId=0x0000002C,0
 
 [Window][Output Watches]
-Pos=1527,77
-Size=393,476
+Pos=1590,77
+Size=330,903
 Collapsed=0
 DockId=0x0000002A,0
 
 [Window][Navigator]
 Pos=0,77
-Size=337,385
+Size=270,484
 Collapsed=0
 DockId=0x00000020,0
 
 [Window][Properties]
-Pos=0,464
-Size=337,333
+Pos=0,563
+Size=270,417
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Performance]
-Pos=1523,83
-Size=397,945
+Pos=1590,77
+Size=330,903
 Collapsed=0
-DockId=0x0000002F,0
+DockId=0x0000002A,1
 
 [Window][Output Plots]
 Pos=1523,77
 Size=397,490
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000024,0
 
 [Window][navigator]
 Pos=0,46
-Size=267,1011
+Size=267,963
 Collapsed=0
 DockId=0x0000001D,0
 
@@ -437,23 +437,23 @@ DockId=0x00000025,0
 Pos=0,46
 Size=850,1011
 Collapsed=0
-DockId=0x00000028,0
+DockId=0x00000034,0
 
 [Window][Result]
 Pos=1327,83
-Size=593,945
+Size=593,897
 Collapsed=0
 DockId=0x00000029,0
 
 [Window][Destination Mesh]
 Pos=572,83
-Size=753,945
+Size=753,897
 Collapsed=0
-DockId=0x00000028,0
+DockId=0x00000034,0
 
 [Window][Source Mesh]
 Pos=0,83
-Size=570,945
+Size=570,897
 Collapsed=0
 DockId=0x00000026,0
 
@@ -468,34 +468,34 @@ Size=965,612
 Collapsed=0
 
 [Window][muscleplot0]
-Pos=1527,555
-Size=393,473
+Pos=1590,531
+Size=330,225
 Collapsed=0
-DockId=0x0000002B,0
+DockId=0x00000032,0
 
 [Window][muscleplot1]
-Pos=1527,555
-Size=393,473
+Pos=1590,758
+Size=330,222
 Collapsed=0
-DockId=0x0000002B,1
+DockId=0x00000033,0
 
 [Window][muscleplot2]
 Pos=1527,555
 Size=393,473
 Collapsed=0
-DockId=0x0000002B,2
+DockId=0x00000032,2
 
 [Window][muscleplot3]
 Pos=1527,555
 Size=393,473
 Collapsed=0
-DockId=0x0000002B,3
+DockId=0x00000032,3
 
 [Window][muscleplot4]
 Pos=1527,555
 Size=393,473
 Collapsed=0
-DockId=0x0000002B,4
+DockId=0x00000032,4
 
 [Window][Edit Geometry Path]
 Pos=576,340
@@ -514,58 +514,105 @@ Collapsed=0
 DockId=0x00000030,0
 
 [Window][framedef_viewer0]
-Pos=339,77
-Size=1581,749
+Pos=272,77
+Size=710,701
 Collapsed=0
-DockId=0x00000028,0
+DockId=0x00000034,0
+
+[Window][viewer4]
+Pos=1262,584
+Size=163,165
+Collapsed=0
+DockId=0x0000002F,0
+
+[Window][viewer5]
+Pos=1427,584
+Size=161,165
+Collapsed=0
+DockId=0x00000031,0
+
+[Window][framedef_viewer1]
+Pos=984,77
+Size=667,701
+Collapsed=0
+DockId=0x00000012,0
+
+[Window][Checklist]
+Pos=0,83
+Size=240,926
+Collapsed=0
+DockId=0x00000036,0
+
+[Window][Source Model]
+Pos=242,83
+Size=787,695
+Collapsed=0
+DockId=0x00000034,0
+
+[Window][Model Warper Experimental Warning]
+Pos=704,388
+Size=512,232
+Collapsed=0
+
+[Window][Result Model]
+Pos=1031,83
+Size=889,695
+Collapsed=0
+DockId=0x00000035,0
 
 [Docking][Data]
-DockNode                                ID=0x00000025 Pos=29,454 Size=621,584 Selected=0xBDBFA952
-DockSpace                               ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,77 Size=1920,951 Split=X Selected=0x945C996A
-  DockNode                              ID=0x0000001F Parent=0x8B93E3BD SizeRef=1521,945 Split=X
-    DockNode                            ID=0x0000002E Parent=0x0000001F SizeRef=1629,945 Split=Y
-      DockNode                          ID=0x00000009 Parent=0x0000002E SizeRef=1920,714 Split=X
-        DockNode                        ID=0x00000016 Parent=0x00000009 SizeRef=1651,1011 Split=X
-          DockNode                      ID=0x00000026 Parent=0x00000016 SizeRef=570,897 Selected=0x66BDF4F8
-          DockNode                      ID=0x00000027 Parent=0x00000016 SizeRef=1348,897 Split=X
-            DockNode                    ID=0x0000001D Parent=0x00000027 SizeRef=267,1009 Selected=0x9DA56915
-            DockNode                    ID=0x00000023 Parent=0x00000027 SizeRef=1651,1009 Split=X
-              DockNode                  ID=0x0000001E Parent=0x00000023 SizeRef=1521,1009 Split=X
-                DockNode                ID=0x00000021 Parent=0x0000001E SizeRef=1525,979 Split=X
-                  DockNode              ID=0x00000015 Parent=0x00000021 SizeRef=322,1118 Selected=0xFA7A28AE
-                  DockNode              ID=0x00000017 Parent=0x00000021 SizeRef=1596,1118 Split=X
-                    DockNode            ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
-                    DockNode            ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
-                      DockNode          ID=0x00000001 Parent=0x00000014 SizeRef=337,1117 Split=Y Selected=0x788BAA0D
-                        DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
-                          DockNode      ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
-                            DockNode    ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
-                            DockNode    ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Split=Y Selected=0xB7559F23
-                              DockNode  ID=0x00000020 Parent=0x0000001C SizeRef=337,482 Selected=0x241F21A5
-                              DockNode  ID=0x0000002C Parent=0x0000001C SizeRef=337,496 Selected=0xB7559F23
-                          DockNode      ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
-                        DockNode        ID=0x0000000B Parent=0x00000001 SizeRef=362,517 Selected=0x199AB496
-                      DockNode          ID=0x00000002 Parent=0x00000014 SizeRef=1581,1117 Split=Y
-                        DockNode        ID=0x00000007 Parent=0x00000002 SizeRef=1157,916 Split=X Selected=0xEFD926F6
-                          DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=811,916 Split=X Selected=0x7644F5CE
-                            DockNode    ID=0x0000000E Parent=0x00000004 SizeRef=850,1011 Split=X Selected=0xE9146C8E
-                              DockNode  ID=0x00000028 Parent=0x0000000E SizeRef=753,897 CentralNode=1 Selected=0x7644F5CE
-                              DockNode  ID=0x00000029 Parent=0x0000000E SizeRef=593,897 Selected=0x0FF6C27D
-                            DockNode    ID=0x00000010 Parent=0x00000004 SizeRef=1068,1011 Selected=0x075BE350
-                          DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=768,916 Split=Y Selected=0x98DE1660
-                            DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 Selected=0x4B24DC7E
-                            DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
-                              DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x0C84A6AE
-                              DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
-                        DockNode        ID=0x00000008 Parent=0x00000002 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
-                DockNode                ID=0x00000022 Parent=0x0000001E SizeRef=393,979 Split=Y Selected=0xD0534012
-                  DockNode              ID=0x0000002A Parent=0x00000022 SizeRef=393,476 Selected=0xD0534012
-                  DockNode              ID=0x0000002B Parent=0x00000022 SizeRef=393,473 Selected=0x54544FA1
-              DockNode                  ID=0x00000024 Parent=0x00000023 SizeRef=397,1009 Split=Y Selected=0xCA5A0F8B
-                DockNode                ID=0x00000011 Parent=0x00000024 SizeRef=397,505 Selected=0x8327EF2F
-                DockNode                ID=0x00000012 Parent=0x00000024 SizeRef=397,502 Selected=0x6546E8FE
-        DockNode                        ID=0x00000018 Parent=0x00000009 SizeRef=267,1011 Selected=0x2A02436D
-      DockNode                          ID=0x0000000A Parent=0x0000002E SizeRef=1920,229 Selected=0x64F50EE5
-    DockNode                            ID=0x00000030 Parent=0x0000001F SizeRef=289,945 Selected=0xAC9ECCBA
-  DockNode                              ID=0x0000002F Parent=0x8B93E3BD SizeRef=397,945 Selected=0x60B79D0E
+DockNode                                      ID=0x00000025 Pos=29,454 Size=621,584 Selected=0xBDBFA952
+DockSpace                                     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,77 Size=1920,903 Split=X Selected=0x945C996A
+  DockNode                                    ID=0x00000036 Parent=0x8B93E3BD SizeRef=240,926 Selected=0x54046687
+  DockNode                                    ID=0x00000037 Parent=0x8B93E3BD SizeRef=1678,926 Split=X
+    DockNode                                  ID=0x0000002E Parent=0x00000037 SizeRef=1629,945 Split=X
+      DockNode                                ID=0x00000026 Parent=0x0000002E SizeRef=570,897 Selected=0x66BDF4F8
+      DockNode                                ID=0x00000027 Parent=0x0000002E SizeRef=1348,897 Split=X
+        DockNode                              ID=0x0000001D Parent=0x00000027 SizeRef=267,1009 Selected=0x9DA56915
+        DockNode                              ID=0x00000023 Parent=0x00000027 SizeRef=1651,1009 Split=X
+          DockNode                            ID=0x0000001E Parent=0x00000023 SizeRef=1521,1009 Split=X
+            DockNode                          ID=0x00000021 Parent=0x0000001E SizeRef=1588,979 Split=X
+              DockNode                        ID=0x00000015 Parent=0x00000021 SizeRef=322,1118 Selected=0xFA7A28AE
+              DockNode                        ID=0x00000017 Parent=0x00000021 SizeRef=1596,1118 Split=X
+                DockNode                      ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
+                DockNode                      ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
+                  DockNode                    ID=0x00000001 Parent=0x00000014 SizeRef=270,1117 Split=Y Selected=0x788BAA0D
+                    DockNode                  ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
+                      DockNode                ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
+                        DockNode              ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
+                        DockNode              ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Split=Y Selected=0xB7559F23
+                          DockNode            ID=0x00000020 Parent=0x0000001C SizeRef=337,482 Selected=0x2EDB22E0
+                          DockNode            ID=0x0000002C Parent=0x0000001C SizeRef=337,496 Selected=0xB7559F23
+                      DockNode                ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
+                    DockNode                  ID=0x0000000B Parent=0x00000001 SizeRef=362,517 Selected=0x199AB496
+                  DockNode                    ID=0x00000002 Parent=0x00000014 SizeRef=1316,1117 Split=Y
+                    DockNode                  ID=0x00000007 Parent=0x00000002 SizeRef=1157,916 Split=X Selected=0xEFD926F6
+                      DockNode                ID=0x0000000E Parent=0x00000007 SizeRef=850,1011 Split=X Selected=0xE9146C8E
+                        DockNode              ID=0x00000028 Parent=0x0000000E SizeRef=753,897 Split=Y Selected=0x7644F5CE
+                          DockNode            ID=0x00000009 Parent=0x00000028 SizeRef=1186,672 Split=X Selected=0x7644F5CE
+                            DockNode          ID=0x00000006 Parent=0x00000009 SizeRef=658,672 Split=X Selected=0xBF54CEA6
+                              DockNode        ID=0x00000011 Parent=0x00000006 SizeRef=710,701 Split=X Selected=0xE9146C8E
+                                DockNode      ID=0x00000034 Parent=0x00000011 SizeRef=787,695 CentralNode=1 Selected=0x7644F5CE
+                                DockNode      ID=0x00000035 Parent=0x00000011 SizeRef=889,695 Selected=0x3A46E54B
+                              DockNode        ID=0x00000012 Parent=0x00000006 SizeRef=667,701 Selected=0x8234E716
+                            DockNode          ID=0x0000000C Parent=0x00000009 SizeRef=656,672 Split=Y Selected=0x4B24DC7E
+                              DockNode        ID=0x0000000F Parent=0x0000000C SizeRef=656,336 Selected=0x4B24DC7E
+                              DockNode        ID=0x0000001F Parent=0x0000000C SizeRef=656,334 Split=X Selected=0x0C84A6AE
+                                DockNode      ID=0x00000004 Parent=0x0000001F SizeRef=328,334 Selected=0x0C84A6AE
+                                DockNode      ID=0x0000000D Parent=0x0000001F SizeRef=326,334 Split=Y Selected=0x31E48F1E
+                                  DockNode    ID=0x00000005 Parent=0x0000000D SizeRef=326,167 Selected=0x31E48F1E
+                                  DockNode    ID=0x0000002D Parent=0x0000000D SizeRef=326,165 Split=X Selected=0x83C4530E
+                                    DockNode  ID=0x0000002F Parent=0x0000002D SizeRef=163,165 Selected=0x83C4530E
+                                    DockNode  ID=0x00000031 Parent=0x0000002D SizeRef=161,165 Selected=0xBEA47ABE
+                          DockNode            ID=0x0000000A Parent=0x00000028 SizeRef=1186,229 Selected=0x64F50EE5
+                        DockNode              ID=0x00000029 Parent=0x0000000E SizeRef=593,897 Selected=0x0FF6C27D
+                      DockNode                ID=0x00000010 Parent=0x00000007 SizeRef=1068,1011 Selected=0x075BE350
+                    DockNode                  ID=0x00000008 Parent=0x00000002 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
+            DockNode                          ID=0x00000022 Parent=0x0000001E SizeRef=330,979 Split=Y Selected=0xD0534012
+              DockNode                        ID=0x0000002A Parent=0x00000022 SizeRef=393,476 Selected=0xD0534012
+              DockNode                        ID=0x0000002B Parent=0x00000022 SizeRef=393,473 Split=Y Selected=0xA1D4E961
+                DockNode                      ID=0x00000032 Parent=0x0000002B SizeRef=330,225 Selected=0xA1D4E961
+                DockNode                      ID=0x00000033 Parent=0x0000002B SizeRef=330,222 Selected=0x9CB4C0D1
+          DockNode                            ID=0x00000024 Parent=0x00000023 SizeRef=397,1009 Selected=0xCA5A0F8B
+    DockNode                                  ID=0x00000030 Parent=0x00000037 SizeRef=289,945 Selected=0xAC9ECCBA
 
