Cleanup some tests, separate MaterialPropertyBlock tests

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(testoscar
     Graphics/TestCullMode.cpp
     Graphics/TestDepthStencilRenderBufferParams.cpp
     Graphics/TestGeometries.cpp
+    Graphics/TestMaterialPropertyBlock.cpp
     Graphics/TestSubMeshDescriptor.cpp
     Graphics/TestMesh.cpp
     Graphics/TestMeshIndicesView.cpp
