Add+rollout osc::VariableLengthArray<T, N>

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -450,6 +450,7 @@ add_library(oscar STATIC
     Utils/UID.h
     Utils/UndoRedo.cpp
     Utils/UndoRedo.h
+    Utils/VariableLengthArray.h
     Utils/WatchableLifetime.h
 
     Variant/Variant.cpp
