--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -113,6 +113,7 @@ add_executable(testoscar
     Utils/TestTemporaryFile.cpp
     Utils/TestTransparentStringHasher.cpp
     Utils/TestTypelist.cpp
+    Utils/TestVariableLengthArray.cpp
 
     Variant/TestVariant.cpp
     Variant/TestVariantType.cpp
