--- a/tests/TestOpenSimThirdPartyPlugins/CMakeLists.txt
+++ b/tests/TestOpenSimThirdPartyPlugins/CMakeLists.txt
@@ -69,7 +69,7 @@ if (WIN32)
     add_custom_command(
         TARGET TestOpenSimThirdPartyPlugins
         PRE_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_RUNTIME_DLLS:TestOpenSimThirdPartyPlugins> $<TARGET_FILE_DIR:TestOpenSimThirdPartyPlugins>
+        COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:TestOpenSimThirdPartyPlugins> $<TARGET_RUNTIME_DLLS:TestOpenSimThirdPartyPlugins>
         COMMAND_EXPAND_LISTS
     )
 endif()
