Add OSC_BUILD_OSIM_INLINED support, for OpenSim development

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -1,4 +1,21 @@
-find_package(osim REQUIRED)
+set(
+    OSC_BUILD_OSIM_INLINED OFF
+    CACHE BOOL
+    "Enable/disable building osim as part of building OpenSimCreator (via `add_subdirectory`) rather\
+     than acquiring it externally (via `find_package`). This is useful for developing/testing\
+     Simbody/OpenSim as part of OpenSim Creator's integration"
+)
+
+if(${OSC_BUILD_OSIM_INLINED})
+    add_subdirectory(
+        ${PROJECT_SOURCE_DIR}/third_party/osim
+        osim              # build directory
+        EXCLUDE_FROM_ALL  # we don't want to build every part of it (transitive target)
+        SYSTEM            # the headers from osim (i.e. OpenSim headers) shouldn't be subject to the same warning flags as OSC
+    )
+else()
+    find_package(osim REQUIRED)
+endif()
 
 add_library(OpenSimCreator STATIC
 
