Separate more tests from TestRenderer.cpp (#763)

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(testoscar
     Graphics/TestSubMeshDescriptor.cpp
     Graphics/TestMesh.cpp
     Graphics/TestMeshIndicesView.cpp
+    Graphics/TestMeshTopology.cpp
     Graphics/TestRenderer.cpp
     Graphics/TestRenderTarget.cpp
     Graphics/TestRenderTargetColorAttachment.cpp
